<resources>
    <string name="app_name">Tasky</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_nav">open_nav</string>
    <string name="close_nav">close_nav</string>
    <string name="preference_volume_title">Notifications volume</string>
    <string name="preference_music_title">Preference music</string>
    <string name="preference_language_title">Language</string>
    <string name="default_language">default language</string>
    <string name="preference_language_summary">Preference Language</string>


    <string-array name="language_values">
        <item>es</item>
        <item>en</item>
    </string-array>
    <string-array name="language_entries">
        <item>Spanish</item>
        <item>English</item>
    </string-array>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="edi_store_title">Edit task</string>
    <string name="my_task_lists">MY TASK LISTS</string>
    <string name="family">Family</string>
    <string name="relation">Relation</string>
    <string name="friends">Friends</string>
    <string name="self_care">Self Care</string>
    <string name="home">Home</string>
    <string name="work">Work</string>
    <string name="funny">Fun</string>
    <string name="study">Study</string>
    <string name="other">Other</string>
    <string name="type_of_task">Type of task</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="direction">Direction</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="task">Task</string>
    <string name="img_task">Img Task</string>
    <string name="name_gmail_com">name@gmail.com</string>
    <string name="my_name">My name</string>
    <string name="my_list">My List</string>
    <string name="completed_task">Completed Task</string>
    <string name="all_task">All Task</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="settings">Settings</string>
    <string name="exit">exit</string>
    <string name="search">Search ..</string>
    <string name="search_task">Search ..</string>
    <string name="a_adir_tarea">Add task</string>
    <string name="DeleteTask">Delete Task</string>
    <string name="OK">Ok</string>
    <string name="Cancel">Cancel</string>
    <string name="aresure">Are you sure you want to delete this task?</string>
    <string name="modify">Task modified successfully.</string>
    <string name="TaskEliminated">Task Eliminated</string>
    <string name="AddTask">Task added successfully</string>
    <string name="aqu_ir_la_cita">There is your quote</string>
    <string name="Nosepudoobtenerlacita">Can\'t find a quote</string>
    <string name="your_tasks_ubications">Your tasks ubications</string>
    <string name="add_store_title">Add task</string>
    <string name="oh_de_momento_no_tienes_ninguna_tarea_quieres_a_adir_una">Oh, you don\'t have any task here, do you wanna add one?</string>
    <string name="mytasklist">My lists</string>
    <string name="tasky">Tasky</string>
    <string name="welcome_to_tasky">WELCOME TO TASKY</string>
    <string name="url_image">URL image</string>
    <string name="imagen_tienda">Imagen Tienda</string>
    <string name="task_name">Task name</string>


    <string-array name="task_status_array">
            <item>Family</item>
            <item>Relation</item>
            <item>Friends</item>
            <item>Self Care</item>
            <item>Home</item>
            <item>Work</item>
            <item>Fun</item>
            <item>Study</item>
            <item>Other</item>

        </string-array>


</resources>