<?xml version="1.0" encoding="utf-8"?>
<!-- Menú de navegación con diferentes opciones -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Opción de inicio -->
    <item
        android:id="@+id/homev"
        android:title="@string/home"
        android:icon="@drawable/home_24"
        app:showAsAction="ifRoom"/>

    <!-- Opción para ver todas las tareas -->
    <item
        android:id="@+id/ViewAllask"
        android:title="@string/all_task"
        android:icon="@drawable/task"
        app:showAsAction="ifRoom"/>

    <!-- Opción para ver las tareas completadas -->
    <item
        android:id="@+id/CompletedTask"
        android:title="@string/completed_task"
        android:icon="@drawable/task_24"
        app:showAsAction="ifRoom"/>

    <!-- Opción para ver la lista personalizada del usuario -->
    <item
        android:id="@+id/MyList"
        android:title="@string/my_list"
        android:icon="@drawable/list_24"
        app:showAsAction="ifRoom"/>

</menu>
