<?xml version="1.0" encoding="utf-8"?>
<!-- Menú de navegación lateral -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <!-- Grupo de opciones donde solo una puede estar seleccionada a la vez -->
    <group
        android:checkableBehavior="single">

        <!-- Opción de inicio -->
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_24"
            android:title="@string/home" />

        <!-- Opción de configuración -->
        <item
            android:id="@+id/set"
            android:icon="@drawable/settings_24"
            android:title="@string/settings" />

    </group>

    <!-- Menú secundario para la opción de cierre de sesión -->
    <item
        android:title="">
        <menu>
            <!-- Opción de cierre de sesión -->
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/logout_24"
                android:title="@string/exit" />
        </menu>
    </item>

</menu>
