<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ListsTasksFragment"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:id="@+id/list">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="58dp"
            android:layout_marginBottom="40dp"
            android:text="@string/my_task_lists"
            android:textColor="@android:color/holo_purple"
            android:textSize="34sp"
            android:textStyle="bold"/>
    </LinearLayout>


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="3"
        android:rowCount="5"
        android:padding="16dp"
        android:orientation="horizontal"
        android:layout_marginTop="100dp">

        <!-- Tarjeta de la categoría "Family" -->
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp"
            android:layout_columnWeight="1"
            app:cardBackgroundColor="@color/red"
            android:id="@+id/family">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/family"
                android:gravity="center"
                android:padding="16dp"
                android:textColor="@color/white"/>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp"
            android:layout_columnWeight="1"
            app:cardBackgroundColor="@color/orange"
            android:id="@+id/relation">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/relation"
                android:gravity="center"
                android:padding="16dp"
                android:textColor="@color/white"/>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp"
            android:layout_columnWeight="1"
            app:cardBackgroundColor="@color/yellow"
            android:id="@+id/friends">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/friends"
                android:gravity="center"
                android:padding="16dp"
                android:textColor="@color/white"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp"
            android:layout_columnWeight="1"
            app:cardBackgroundColor="@color/green"
            android:id="@+id/selfcare">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/self_care"
                android:gravity="center"
                android:padding="16dp"
                android:textColor="@color/white"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp"
            android:layout_columnWeight="1"
            app:cardBackgroundColor="@color/blue"
            android:id="@+id/home">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home"
                android:gravity="center"
                android:padding="16dp"
                android:textColor="@color/white"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp"
            android:layout_columnWeight="1"
            app:cardBackgroundColor="@color/dark_blue"
            android:id="@+id/work">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/work"
                android:gravity="center"
                android:padding="16dp"
                android:textColor="@color/white"/>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp"
            android:layout_columnWeight="1"
            app:cardBackgroundColor="@color/purple"
            android:id="@+id/funny">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/funny"
                android:gravity="center"
                android:padding="16dp"
                android:textColor="@color/white"/>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp"
            android:layout_columnWeight="1"
            app:cardBackgroundColor="@color/pink"
            android:id="@+id/study">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/study"
                android:gravity="center"
                android:padding="16dp"
                android:textColor="@color/white"/>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp"
            android:layout_columnWeight="1"
            app:cardBackgroundColor="@color/brown"
            android:id="@+id/other">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/other"
                android:gravity="center"
                android:padding="16dp"
                android:textColor="@color/white"/>
        </androidx.cardview.widget.CardView>
    </GridLayout>

    <TextView
        android:id="@+id/tvQuote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aqu_ir_la_cita"
        android:textSize="18sp"
        android:padding="26dp"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textStyle="italic"
        android:textColor="@android:color/darker_gray"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_gravity="bottom"
        android:layout_marginBottom="290dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_tasks_ubications"
        android:layout_gravity="bottom"
        android:layout_marginBottom="250dp"
        android:layout_marginStart="150dp"
        android:layout_marginEnd="100dp"
        android:textStyle="bold"/>

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="bottom"
        android:layout_margin="40dp"/>

</FrameLayout>
